; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_carray.c_carrayColumn.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_carray.c_carrayColumn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32, i64, i32 }

@SQLITE_OK = common dso_local global i32 0, align 4
@azType = common dso_local global i8** null, align 8
@SQLITE_STATIC = common dso_local global i32 0, align 4
@SQLITE_TRANSIENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @carrayColumn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @carrayColumn(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_2__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca double*, align 8
  %13 = alloca i8**, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = bitcast i32* %14 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %15, %struct.TYPE_2__** %8, align 8
  store i32 0, i32* %9, align 4
  %16 = load i32, i32* %7, align 4
  switch i32 %16, label %34 [
    i32 132, label %17
    i32 134, label %19
    i32 133, label %23
  ]

17:                                               ; preds = %3
  %18 = load i32, i32* @SQLITE_OK, align 4
  store i32 %18, i32* %4, align 4
  br label %109

19:                                               ; preds = %3
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 8
  store i32 %22, i32* %9, align 4
  br label %104

23:                                               ; preds = %3
  %24 = load i32*, i32** %6, align 8
  %25 = load i8**, i8*** @azType, align 8
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = getelementptr inbounds i8*, i8** %25, i64 %28
  %30 = load i8*, i8** %29, align 8
  %31 = load i32, i32* @SQLITE_STATIC, align 4
  %32 = call i32 @sqlite3_result_text(i32* %24, i8* %30, i32 -1, i32 %31)
  %33 = load i32, i32* @SQLITE_OK, align 4
  store i32 %33, i32* %4, align 4
  br label %109

34:                                               ; preds = %3
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  switch i64 %37, label %103 [
    i64 130, label %38
    i64 129, label %54
    i64 131, label %70
    i64 128, label %86
  ]

38:                                               ; preds = %34
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 2
  %41 = load i64, i64* %40, align 8
  %42 = inttoptr i64 %41 to i32*
  store i32* %42, i32** %10, align 8
  %43 = load i32*, i32** %6, align 8
  %44 = load i32*, i32** %10, align 8
  %45 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %46 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i32 0, i32 1
  %47 = load i32, i32* %46, align 8
  %48 = sub nsw i32 %47, 1
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %44, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @sqlite3_result_int(i32* %43, i32 %51)
  %53 = load i32, i32* @SQLITE_OK, align 4
  store i32 %53, i32* %4, align 4
  br label %109

54:                                               ; preds = %34
  %55 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %56 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %55, i32 0, i32 2
  %57 = load i64, i64* %56, align 8
  %58 = inttoptr i64 %57 to i32*
  store i32* %58, i32** %11, align 8
  %59 = load i32*, i32** %6, align 8
  %60 = load i32*, i32** %11, align 8
  %61 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %62 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %61, i32 0, i32 1
  %63 = load i32, i32* %62, align 8
  %64 = sub nsw i32 %63, 1
  %65 = sext i32 %64 to i64
  %66 = getelementptr inbounds i32, i32* %60, i64 %65
  %67 = load i32, i32* %66, align 4
  %68 = call i32 @sqlite3_result_int64(i32* %59, i32 %67)
  %69 = load i32, i32* @SQLITE_OK, align 4
  store i32 %69, i32* %4, align 4
  br label %109

70:                                               ; preds = %34
  %71 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %72 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %71, i32 0, i32 2
  %73 = load i64, i64* %72, align 8
  %74 = inttoptr i64 %73 to double*
  store double* %74, double** %12, align 8
  %75 = load i32*, i32** %6, align 8
  %76 = load double*, double** %12, align 8
  %77 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %78 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %77, i32 0, i32 1
  %79 = load i32, i32* %78, align 8
  %80 = sub nsw i32 %79, 1
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds double, double* %76, i64 %81
  %83 = load double, double* %82, align 8
  %84 = call i32 @sqlite3_result_double(i32* %75, double %83)
  %85 = load i32, i32* @SQLITE_OK, align 4
  store i32 %85, i32* %4, align 4
  br label %109

86:                                               ; preds = %34
  %87 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %88 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %87, i32 0, i32 2
  %89 = load i64, i64* %88, align 8
  %90 = inttoptr i64 %89 to i8**
  store i8** %90, i8*** %13, align 8
  %91 = load i32*, i32** %6, align 8
  %92 = load i8**, i8*** %13, align 8
  %93 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %94 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %93, i32 0, i32 1
  %95 = load i32, i32* %94, align 8
  %96 = sub nsw i32 %95, 1
  %97 = sext i32 %96 to i64
  %98 = getelementptr inbounds i8*, i8** %92, i64 %97
  %99 = load i8*, i8** %98, align 8
  %100 = load i32, i32* @SQLITE_TRANSIENT, align 4
  %101 = call i32 @sqlite3_result_text(i32* %91, i8* %99, i32 -1, i32 %100)
  %102 = load i32, i32* @SQLITE_OK, align 4
  store i32 %102, i32* %4, align 4
  br label %109

103:                                              ; preds = %34
  br label %104

104:                                              ; preds = %103, %19
  %105 = load i32*, i32** %6, align 8
  %106 = load i32, i32* %9, align 4
  %107 = call i32 @sqlite3_result_int64(i32* %105, i32 %106)
  %108 = load i32, i32* @SQLITE_OK, align 4
  store i32 %108, i32* %4, align 4
  br label %109

109:                                              ; preds = %104, %86, %70, %54, %38, %23, %17
  %110 = load i32, i32* %4, align 4
  ret i32 %110
}

declare dso_local i32 @sqlite3_result_text(i32*, i8*, i32, i32) #1

declare dso_local i32 @sqlite3_result_int(i32*, i32) #1

declare dso_local i32 @sqlite3_result_int64(i32*, i32) #1

declare dso_local i32 @sqlite3_result_double(i32*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
